<resources>
    <string name="app_name">NewsPie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank">Hello blank fragment</string>

    <!--NAVIGATION-->
    <!--Header-->
    <string name="cat_header">News Categories</string>
    <string name="cat_label">Category</string>
    <!--Items-->
    <string name="home">Home</string>
    <string name="general">General</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="tech">Technology</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="entertainment">Entertainment</string>

    <!--Lorem Ipsum-->
    <string name="lorem">
        They come from two political groups that have fought violent battles in the streets.
        What happened when they met? They come from two political groups that have fought violent
        battles in the streets. What happened when they met?
    </string>

    <string name="titles">
        May urges EU to agree backstop changes
    </string>

    <string name="time">
        2019-03-07T22:34:00Z
    </string>


    <!--For our hamburger logout_menu-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headlineimage">headlineImage</string>
    <string name="bookmark_button">bookmark_button</string>
    <string name="see_full_article">See full article</string>
    <string name="bookmarkicon">bookmarkIcon</string>
    <string name="user_placeholder">user placeholder</string>
    <string name="test_user">Test User</string>
    <string name="logout">Logout</string>
    <string name="placeholder">Placeholder</string>
    <string name="article_manenos">Article manenos</string>
    <string name="sub_heading">Sub Heading</string>
    <string name="title_of_news">Title of News</string>
    <string name="a_time_ago">a time ago</string>
    <string name="_01_january_1990">01 January 1990</string>
</resources>
