<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/home"
            android:icon="@drawable/ic_home"
            android:id="@+id/nav_home"/>
        <item
            android:title="@string/general"
            android:icon="@drawable/ic_general"
            android:id="@+id/nav_general"/>
        <item
            android:title="@string/business"
            android:icon="@drawable/ic_business"
            android:id="@+id/nav_business"/>
        <item
            android:title="@string/sports"
            android:icon="@drawable/ic_sports"
            android:id="@+id/nav_sports"/>
        <item
            android:title="@string/tech"
            android:icon="@drawable/ic_tech"
            android:id="@+id/nav_tech"/>
        <item
            android:title="@string/health"
            android:icon="@drawable/ic_health"
            android:id="@+id/nav_health"/>
        <item
            android:title="@string/science"
            android:icon="@drawable/ic_science"
            android:id="@+id/nav_science"/>
        <item
            android:title="@string/entertainment"
            android:icon="@drawable/ic_entertainment"
            android:id="@+id/nav_entertainment"/>
    </group>
</menu>