<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:gravity="bottom">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        android:contentDescription="@string/user_placeholder"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_user"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/mintCream"
        android:id="@+id/usernameTxt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cat_header"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"/>



</LinearLayout>