<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    android:elevation="10dp"
    android:layout_centerInParent="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/biju"
            android:scaleType="fitXY"
            android:contentDescription="@string/headlineimage"
            android:id="@+id/headlineImg"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headlineImg"
            android:layout_alignParentStart="true"
            android:text="@string/titles"
            android:textSize="15sp"
            android:textColor="@color/secondaryTheme2"
            android:padding="7dp"
            android:id="@+id/headlineTitle"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headlineTitle"
            android:layout_alignParentStart="true"
            android:text="@string/lorem"
            android:padding="7dp"
            android:id="@+id/headlineDescription"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headlineDescription"
            android:layout_alignParentStart="true"
            android:text="@string/time"
            android:padding="7dp"
            android:id="@+id/publishedAt"/>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/publishedAt"
            android:layout_alignParentStart="true"
            android:text="@string/time"
            android:padding="7dp" />-->

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bookmark"
            android:layout_below="@id/publishedAt"
            android:background="@color/mintCream"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:contentDescription="@string/bookmark_button"
            android:id="@+id/bookmarkButton"/>


    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>